styles.css
body{
    background-color: black;
    color: white;
    font-family: 'Montserrat', sans-serif;
}
.navbar{
    display: flex;
    justify-content: center;
}
.navbar ul{
    list-style-type: none;
    margin: 0;
    padding: 0;
}
.navbar li{
    display: inline-block;
    padding: 1em 2em;
}
.navbar a{
    padding: 1em 1.34em;
    background-color: #232323;
    border: 0px #232323;
    border-radius: 4.8em;
    text-decoration: none;
    display: inline-block;
    color: white;
}
.timer{
    display: flex;
}
#tedxlogo{
    display: block;
    margin: 0 auto;
    margin-top: 2em;
}
#titleLanding{
    text-align: center;
    font-size: 90px;
    margin-top: 0px;
    margin-bottom: 0px;
}
#countdown li{
    display: inline-block;
    min-width: 25%;
    max-height: 15em;
    font-size: 0.75em;
    font-weight: bold;
    list-style-type: none;
    background-color: white;
    color: black;
    border: 0px white;
    border-radius: 30px;
    text-align: center;
    margin: 2% 1.5%;
    padding: 2em 0.01em;
}
#countdown ul{
    padding: 20px 3px;
}
#countdown li span{
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    display: block;
    font-weight: lighter;
    font-size: 4.5rem;
}
#register{
    background-color: #232323;
    color: white;
    border: 0px #232323;
    margin: 2% 7.5%;
    max-height: 28%;
    border-radius: 40px;
    font-size: 50px;
}
#arrow{
    margin-left: 232px;
}
#logocount{
    list-style: none;
    display: flex;
    justify-content: space-evenly;
}
#logocount li{
    margin: 2px;
}
/* 
landing page 
*/


.speakers{
    height: 100vh;
    background: var(--black, #000);
    display: flex;
    justify-content: space-around;
}
.lefty{
    flex-basis: 0;
    margin-top: 4vh;
    width: fit-content;
}
.righty{
    float: right;
    flex-basis: 0;
    margin-top: 2vh;
    width: fit-content;
}

.headSpkrs{
    display: flex;
    border-radius: 40px;
    background: var(--white, #FFF);
    padding: 36px 333px 36px 50px;
    align-items: center;
    width: auto;
}
.spkrsText{
    color: var(--light-black, #232323);
    text-align: center;
    font-family: Satoshi Variable;
    font-size: 50px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;
}

.spkrsAbout-l{
    display: flex;
    width: 595px;
    height: 230px;
    padding: 42px 30px;
    margin-top: 2vh;
    justify-content: center;
    align-items: center;
    border-radius: 40px;
    background: var(--red, #FF2B06);
}

.spkrsAboutText-l{
    width: 520px;
    flex-shrink: 0;
    color: var(--light-black, #232323);
    font-family: Satoshi Variable;
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;    
}

.spkrsAbout-r{
    display: flex;
    width: 595px;
    height: 230px;
    padding: 42px 30px;
    margin-top: 2vh;
    justify-content: center;
    align-items: center;
    border-radius: 40px;
    background: var(--light-black, #232323);
}

.spkrsAboutText-r{
    width: 520px;
    flex-shrink: 0;
    color: var(--white, #FFF);
    font-family: Satoshi Variable;
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;    
}

.spkrLayer{
   display: flex; 
   height: min-content;
   margin-top: 2vh;
   justify-content: flex-start;
}
.spkrsPhoto-l{
    border-radius: 40px;
    background: var(--light-black, #232323);
    width: 199px;
    height: 184px;
}
.spkrsPhoto-r{
    border-radius: 40px;
    background: var(--red, #FF2B06);
    width: 199px;
    height: 184px;
}
.spkrsTitleBlock-l{
    width: 381px;
    height: 120px;
    padding: 45px 30px 20px 30px;
    margin-left: 2vh;
    background: var(--light-black, #232323);        
    border-radius: 40px;
}
.spkrsTitleBlock-r{
    width: 381px;
    height: 120px;
    padding: 45px 30px 20px 30px;
    margin-left: 2vh;
    background: var(--red, #FF2B06);       
    border-radius: 40px;
}
.spkrsTitle-l{  
    display: flex;
    gap: 5px;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;  
}

.spkrsTitleText-1-l{
    color: var(--white, #FFF);
    font-family: Satoshi Variable;
    font-size: 34px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;    
}
.spkrsTitleText-2-l{
    color: var(--white, #FFF);
    font-family: Satoshi Variable;
    font-size: 17px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;    
}

.spkrsTitleText-1-r{
    color: var(--light-black, #232323);
    font-family: Satoshi Variable;
    font-size: 34px;
    font-style: normal;
    font-weight: 700;
    line-height: normal;    
}
.spkrsTitleText-2-r{
    color: var(--light-black, #232323);
    font-family: Satoshi Variable;
    font-size: 17px;
    font-style: normal;
    font-weight: 500;
    line-height: normal;    
}
.spkrsNav{
    display: flex;
    margin-top: 2vh;
}
.arrowL{
    display: flex;
    width: 290px;
    height: 140px;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    border-radius: 70px;
    background: var(--white, #FFF);
}

.arrowR{
    display: flex;
    width: 290px;
    height: 140px;
    justify-content: center;
    align-items: center;
    flex-shrink: 0;
    margin-left: 4vh;
    border-radius: 70px;
    background: var(--white, #FFF);   
}


@media screen and (max-width: 825px) {
    .speakers{
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: flex-start;
    }
    .lefty{
        margin-left: 0vb;
    }
    .righty{
        margin-left: 0vb;
    }

    .headSpkrs{
        height: 1.5rem;
        flex-shrink: 0;
        border-radius: 2.5rem;
    }
    .spkrsText{
        text-align: center;
        width: max-content;
        font-size: 2.5rem;
        line-height: normal;
        margin-top: -1vh;
    }
}

@media screen and (max-width: 420px){
    .speakers{
        display: flex;
        flex-direction: column;
        width: fit-content;
    }  

}
/* ... */

